--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -15,12 +15,12 @@
             <div class="form-group">
                 <label for="email">Email</label>
                 <input type="username" id="username" class="form-control" ngModel name="username" required email
-                    [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('name'), 'is-valid' : formFailedSubmit && !errorFields.includes('name')}">
+                    [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('username'), 'is-valid' : formFailedSubmit && !errorFields.includes('username')}">
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
                 <input type="password" id="password" class="form-control" ngModel name="password" required minlength="6"
-                    [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('name'), 'is-valid' : formFailedSubmit && !errorFields.includes('name')}">
+                    [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('password'), 'is-valid' : formFailedSubmit && !errorFields.includes('password')}">
             </div>
             <div class="mt-5">
                 <button class="btn btn-primary" type="submit" [disabled]="!authForm.valid">{{'Login'}}</button>
