--- a/src/assets/scss/setup/_utilities.scss
+++ b/src/assets/scss/setup/_utilities.scss
@@ -53,3 +53,14 @@
 .asterisk-if-mandatory::after {
   content: " *";
 }
+
+
+.Deactived,
+.Deaktiveret {
+  color: $color-error;
+}
+
+.Active,
+.Aktiv {
+  color: $color-success;
+}
