--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,6 +48,7 @@ $OS2IoT-frontend-theme: mat-light-theme($OS2IoT-frontend-primary, $OS2IoT-fronte
 @import 'assets/scss/setup/typography';
 @import 'assets/scss/setup/utilities';
 @import 'assets/scss/setup/variables';
+@import 'assets/scss/setup/vendors';
 
 
 
