--- a/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
+++ b/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
@@ -1,12 +1,7 @@
-<app-top-bar-single [data]="organisation" [backButton]="backButton" [buttons]="buttons"></app-top-bar-single>
-<div class="p-5 row">
+<app-top-bar-single [data]="organisation" [backButton]="backButton"></app-top-bar-single>
+<!-- <div class="p-5 row">
     <div class="col-6">
-        <div class="card mb-5">
-            <div class="card-header">
-                <h2>{{ 'ORGANISATION.DETAIL.NAME' | translate }}</h2>
-            </div>
-            {{organisation.name}}
-        </div>
+
     </div>
     <div class="col-6">
         <div class="card">
@@ -24,9 +19,46 @@
                 {{ 'ORGANISATION.DETAIL.APPLICATIONS' | translate }}
             </div>
             <div>
-                <!-- <app-applications-table [applications]="applications" (deleteApplication)="deleteApplication($event)">
-                </app-applications-table> -->
+                <app-applications-table [applications]="applications" (deleteApplication)="deleteApplication($event)">
+                </app-applications-table>
             </div>
         </div>
     </div>
+</div> -->
+
+<div class=" jumbotron m-md-4 p-md-3" *ngIf="organisation">
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="float-left">
+
+
+                <h2>{{ 'ORGANISATION.DETAIL.NAME' | translate }}</h2>
+
+                {{organisation.name}}
+            </div>
+            <div class="btn-group float-right">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    {{'ORGANISATION.DROPDOWN' | translate}} <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{organisation.id}}">
+                    <li class="dropdown-item">
+                        <a [routerLink]="['edit-user']"
+                            routerLinkActive="active">{{ 'ORGANISATION.TABLE-ROW.EDIT' | translate }}
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="jumbotron m-md-4 p-md-3">
+    <h4 class="">
+        {{ 'ORGANISATION.DETAIL.APPLICATIONS' | translate }}
+    </h4>
+
+    <app-applications-table [applications]="applications" (deleteApplication)="deleteApplication($event)">
+    </app-applications-table>
+
 </div>
