--- a/src/app/admin/organisation/organisation-list/organisation-tabel/organisation-row/organisation-row.component.html
+++ b/src/app/admin/organisation/organisation-list/organisation-tabel/organisation-row/organisation-row.component.html
@@ -1,28 +1,28 @@
-<td class="position-relative">
+<td>
   <a [routerLink]="[organisation.id]" routerLinkActive="active" class="organisation-link">
     {{organisation.name}}</a>
 </td>
-<td class="position-relative pr-3">
+<td>
   <div *ngIf="organisation.applications; else noApplications">
     {{organisation.applications.length}}
   </div>
   <ng-template #noApplications>
     <div>Ingen applikationer er tilknyttet endnu</div>
   </ng-template>
-
-  <div class="dropdown position-absolute">
+</td>
+<td>
+  <div class="dropdown ">
     <a href="#" role="button" id="tableRowDropdown-{{organisation.id}}" class="applicationRow__edit dropdown-toggle"
       data-toggle="dropdown" aria-expanded="false"
-      [attr.aria-label]="'ORGANISATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
+      [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
     <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{organisation.id}}">
-      <li>
-        <a class="dropdown-item" [routerLink]="[organisation.id, 'edit-organisation']"
-          routerLinkActive="active">{{ 'ORGANISATION-TABLE-ROW.EDIT' | translate }}
+      <li class="dropdown-item">
+        <a [routerLink]="[organisation.id, 'edit-organisation']"
+          routerLinkActive="active">{{ 'USERS.TABLE-ROW.EDIT' | translate }}
         </a>
       </li>
-      <li>
-        <a (click)="clickDelete()" class="dropdown-item"
-          [routerLink]="">{{ 'ORGANISATION-TABLE-ROW.DELETE' | translate }}
+      <li class="dropdown-item">
+        <a (click)="clickDelete()" [routerLink]="">{{ 'ORGANISATION-TABLE-ROW.DELETE' | translate }}
         </a>
       </li>
     </ul>
