--- a/src/app/admin/permission/permission-detail/permission-detail.component.html
+++ b/src/app/admin/permission/permission-detail/permission-detail.component.html
@@ -1,1 +1,37 @@
-<p>permission-detail works!</p>
+<app-top-bar-single [data]="permission" [backButton]="backButton" [buttons]="buttons"></app-top-bar-single>
+
+<div class=" jumbotron m-md-4 p-md-3" *ngIf="permission">
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="float-left">
+                <h4>Generelle Info</h4>
+                <p>{{permission.name}}</p>
+                <p>Adgangstype: {{permission.type}}</p>
+                <p>Organisation:
+                    {{permission.organization?.name}}
+                </p>
+            </div>
+            <div class="btn-group float-right">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    {{'PROFILES.SERVICE_PROFILE.DROPDOWN' | translate}} <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{permission.id}}">
+                    <li class="dropdown-item">
+                        <a [routerLink]="['edit-permission']"
+                            routerLinkActive="active">{{ 'PERMISSIONS.TABLE-ROW.EDIT' | translate }}
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- <div class="jumbotron m-md-4 p-md-3">
+    <h4 class="">
+        {{ 'PERMISSIONS.DETAIL.PERMISSIONS' | translate }}
+    </h4>
+
+
+</div> -->
