--- a/src/app/admin/permission/permission-edit/permission-edit.component.html
+++ b/src/app/admin/permission/permission-edit/permission-edit.component.html
@@ -29,7 +29,7 @@
         </select>
     </div>
 
-    <div class="form-group mt-3 col-12">
+    <!-- <div class="form-group mt-3 col-12">
         <label class="form-label" for="name">{{'QUESTION.CHOOSE-USERS' | translate}}</label>*
         <div class="col-6">
             <select id="userIds" name="userIds" class="custom-select" multiple [(ngModel)]="permission.userIds">
@@ -37,6 +37,15 @@
                     {{user.name}}</option>
             </select>
         </div>
+    </div> -->
+    <div class="form-group mt-3 col-12">
+        <mat-form-field>
+            <mat-label class="form-label" for="name">{{'QUESTION.CHOOSE-USERS' | translate}}</mat-label>
+            <mat-select id="userIds" name="userIds" class="custom-select" multiple [(ngModel)]="permission.userIds"
+                multiple>
+                <mat-option *ngFor="let user of users" [value]="user.id">{{user.name}}</mat-option>
+            </mat-select>
+        </mat-form-field>
     </div>
 
     <div *ngIf="permission.level != 'GlobalAdmin'">
@@ -58,7 +67,8 @@
         <div class="form-group mt-3 col-12">
             <label class="form-label" for="name">{{'QUESTION.CHOOSE-APPLICATIONS' | translate}}</label>*
             <div class="col-6">
-                <select id="applicationIds" name="applicationIds" class="custom-select" multiple [(ngModel)]="permission.applicationIds">
+                <select id="applicationIds" name="applicationIds" class="custom-select" multiple
+                    [(ngModel)]="permission.applicationIds">
                     <option *ngFor="let app of applications" [value]="app.id"
                         [selected]="isApplicationPartOfPermission(app.id)">
                         {{app.name}}</option>
