--- a/src/app/admin/users/user-edit/user-edit.component.html
+++ b/src/app/admin/users/user-edit/user-edit.component.html
@@ -38,12 +38,11 @@
     </div>
     <div class="row mb-5">
         <mat-slide-toggle [(ngModel)]="user.active" id="active" name="active">
-            {{'USERS.FORM.GLOBAL-ADMIN' | translate}}</mat-slide-toggle>
+            {{'USERS.FORM.ACTIVE' | translate}}</mat-slide-toggle>
     </div>
     <div class="row mb-3">
-        <mat-label>{{'USERS.FORM.GLOBAL-ADMIN' | translate}} TODO</mat-label>
-        <!-- <mat-slide-toggle [(ngModel)]="" id="permission" name="permission">
-            {{'USERS.FORM.GLOBAL-ADMIN' | translate}}</mat-slide-toggle> -->
+        <mat-slide-toggle [(ngModel)]="user.globalAdmin" id="permission" name="permission">
+            {{'USERS.FORM.GLOBAL-ADMIN' | translate}}</mat-slide-toggle>
     </div>
     <div class="form-group mt-5 clearfix">
         <div class="col-12 d-flex justify-content-end">
