--- a/src/app/admin/users/user-list/user-table/user-table-row/user-table-row.component.html
+++ b/src/app/admin/users/user-list/user-table/user-table-row/user-table-row.component.html
@@ -1,37 +1,33 @@
-<td class="position-relative">
+<td>
     <a [routerLink]="[user.id]" routerLinkActive="active" class="application-link">
         {{user.name}}</a>
 </td>
-<td class="position-relative">
+<td>
     <p>{{user.email}}</p>
 </td>
-<td class="position-relative">
+<td>
     <p>{{((user.permissions | isGlobalAdmin) ? 'USERS.GLOBAL_ADMIN.TRUE' : 'USERS.GLOBAL_ADMIN.FALSE') | translate}}</p>
 </td>
-<td class="position-relative">
-    <p>
-        {{user.active | activeDeactive}}</p>
+<td>
+    <p [ngClass]="user.active | activeDeactive">{{user.active | activeDeactive}}</p>
 </td>
-<td class="position-relative">
+<td>
     <div *ngIf="user.lastLogin; else noLogin">
         <P> {{user.lastLogin | date}}</P>
     </div>
     <ng-template #noLogin>
         <P>Ikke logget på endnu</P>
     </ng-template>
-    <div class="dropdown position-absolute">
+</td>
+<td>
+    <div class="dropdown ">
         <a href="#" role="button" id="tableRowDropdown-{{user.id}}" class="applicationRow__edit dropdown-toggle"
             data-toggle="dropdown" aria-expanded="false"
             [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
         <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{user.id}}">
-            <li>
-                <a class="dropdown-item" [routerLink]="[user.id, 'edit-user']"
+            <li class="dropdown-item">
+                <a [routerLink]="[user.id, 'edit-user']"
                     routerLinkActive="active">{{ 'USERS.TABLE-ROW.EDIT' | translate }}
-                </a>
-            </li>
-            <li>
-                <a (click)="clickDelete()" class="dropdown-item"
-                    [routerLink]="">{{ 'USERS.TABLE-ROW.DELETE' | translate }}
                 </a>
             </li>
         </ul>
