--- a/src/app/admin/users/user-list/user-table/user-table.component.html
+++ b/src/app/admin/users/user-list/user-table/user-table.component.html
@@ -1,15 +1,18 @@
-<table class="table">
-    <thead>
-        <tr>
-            <th>{{ 'USERS.NAME' | translate }}</th>
-            <th>{{ 'USERS.EMAIL' | translate }}</th>
-            <th>{{ 'USERS.GLOBALADMIN' | translate }}</th>
-            <th>{{ 'USERS.STATUS' | translate }}</th>
-            <th>{{ 'USERS.LASTLOG' | translate }}</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let user of users" class="py-3" app-user-table-row [user]="user" (deleteUser)="deleteUser($event)">
-        </tr>
-    </tbody>
-</table>
+<div class="table-responsive">
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">{{ 'USERS.NAME' | translate }}</th>
+                <th scope="col">{{ 'USERS.EMAIL' | translate }}</th>
+                <th scope="col">{{ 'USERS.GLOBALADMIN' | translate }}</th>
+                <th scope="col">{{ 'USERS.STATUS' | translate }}</th>
+                <th scope="col">{{ 'USERS.EMAIL' | translate }}</th>
+                <th scope="col"></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let user of users" class="py-3" app-user-table-row [user]="user">
+            </tr>
+        </tbody>
+    </table>
+</div>
