--- a/src/assets/scss/components/_tables.scss
+++ b/src/assets/scss/components/_tables.scss
@@ -50,8 +50,6 @@
 }
 
 .dropdown {
-  right: 3rem;
-  top: 10px;
 
   .applicationRow__edit {
     width: 10px;
@@ -81,7 +79,7 @@
       &:active {
         color: $black;
         text-decoration: none;
-        background-color: #0d6efd;
+        background-color: $color-primary;
       }
     }
   }
