--- a/src/app/views/datatarget/datatarget-list/datatarget-list.component.html
+++ b/src/app/views/datatarget/datatarget-list/datatarget-list.component.html
@@ -1,20 +1,12 @@
-<div class="px-5 py-4">
+<div class="px-sm-5 py-sm-4">
   <div class="row mb-5">
-    <app-top-bar 
-      [sort]="sort" 
-      [(selectedSortId)]="selectedSortId" 
-      [pageLimit]="pageLimit"
-      [title]="title" 
-      [ctaLabel]="'FORM.CREATE-NEW-DATATARGET' | translate"
-      [ctaRouterLink]="'datatarget-edit'" 
-      (updatePageLimit)="updatePageLimit($event)"
-      [backButtonTitle]="'Tilbage'"
+    <app-top-bar [sort]="sort" [(selectedSortId)]="selectedSortId" [pageLimit]="pageLimit" [title]="title"
+      [ctaLabel]="'FORM.CREATE-NEW-DATATARGET' | translate" [ctaRouterLink]="'datatarget-edit'"
+      (updatePageLimit)="updatePageLimit($event)" [backButtonTitle]="'Tilbage'"
       (selectedSortChange)="changeSort($event)"></app-top-bar>
   </div>
   <div class="row">
-    <app-datatarget-table 
-      [selectedSortObject]="selectedSortObject" 
-      [pageLimit]="pageLimit">
+    <app-datatarget-table [selectedSortObject]="selectedSortObject" [pageLimit]="pageLimit">
     </app-datatarget-table>
   </div>
 </div>
