--- a/src/app/my-applications/applications-table/applications-table-row/applications-table-row.component.html
+++ b/src/app/my-applications/applications-table/applications-table-row/applications-table-row.component.html
@@ -1,23 +1,29 @@
-<td class="position-relative">
+<td>
   <a [routerLink]="[application.id]" routerLinkActive="active" class="application-link">{{application.name}}</a>
 </td>
 <ng-container *ngIf="application.iotDevices; else iotZero">
-  <td class="position-relative">{{application.iotDevices.length}}</td>
+  <td>{{application.iotDevices.length}}</td>
 </ng-container>
 <ng-template #iotZero>
-  <td class="position-relative">0</td>
+  <td>0</td>
 </ng-template>
-<td class="position-relative pr-3">
+<td>
   {{application.updatedAt | date:'dd/MM yyyy'}}
-  <div class="dropdown position-absolute">
+
+</td>
+<td>
+  <div class="dropdown">
     <a href="#" role="button" id="tableRowDropdown-{{application.id}}" class="applicationRow__edit dropdown-toggle"
       data-toggle="dropdown" aria-expanded="false"
       [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
     <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{application.id}}">
-      <li><a (click)="clickDelete()" class="dropdown-item"
-          [routerLink]="">{{ 'APPLICATION-TABLE-ROW.DELETE' | translate }}</a></li>
-      <li><a class="dropdown-item" [routerLink]="[application.id, 'edit-application']"
-          routerLinkActive="active">{{ 'APPLICATION-TABLE-ROW.EDIT' | translate }}</a></li>
+      <li class="dropdown-item">
+        <a (click)="clickDelete()" [routerLink]="">{{ 'APPLICATION-TABLE-ROW.DELETE' | translate }}</a>
+      </li>
+      <li class="dropdown-item">
+        <a [routerLink]="[application.id, 'edit-application']"
+          routerLinkActive="active">{{ 'APPLICATION-TABLE-ROW.EDIT' | translate }}</a>
+      </li>
     </ul>
   </div>
 </td>
