--- a/src/app/my-applications/applications-table/applications-table.component.html
+++ b/src/app/my-applications/applications-table/applications-table.component.html
@@ -1,17 +1,19 @@
-<table class="table">
-    <thead>
-        <tr>
-            <th scope="col">{{ 'APPLICATION-TABLE.NAME' | translate }}</th>
-            <th scope="col">{{ 'APPLICATION-TABLE.IOT-DEVICES' | translate }}</th>
-            <th scope="col">{{ 'APPLICATION-TABLE.UPDATED' | translate }}</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let application of applications" class="py-3" app-applications-table-row [application]="application"
-            (deleteApplication)="doDeleteApplication($event)"></tr>
-    </tbody>
-</table>
-
+<div class="table-responsive">
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">{{ 'APPLICATION-TABLE.NAME' | translate }}</th>
+                <th scope="col">{{ 'APPLICATION-TABLE.IOT-DEVICES' | translate }}</th>
+                <th scope="col">{{ 'APPLICATION-TABLE.UPDATED' | translate }}</th>
+                <th scope="col"></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let application of applications" class="py-3" app-applications-table-row
+                [application]="application" (deleteApplication)="doDeleteApplication($event)"></tr>
+        </tbody>
+    </table>
+</div>
 <nav *ngIf="pageTotal > 1" [attr.aria-label]="'TABLE.PAGINATION' | translate">
     <ul class="pagination justify-content-center mt-5">
         <li class="page-item">
