--- a/src/app/my-applications/iot-devices/iot-devices-list/iot-devices-list.component.html
+++ b/src/app/my-applications/iot-devices/iot-devices-list/iot-devices-list.component.html
@@ -1,4 +1,4 @@
-<div class="px-5 py-4">
+<div class="px-sm-5 py-sm-4">
   <div class="row mb-5">
     <app-top-bar [sort]="sort" [(selectedSortId)]="selectedSortId" [pageLimit]="pageLimit"
       [title]="'NAV.ALL-IOT-DEVICES' | translate" (updatePageLimit)="updatePageLimit($event)"
