--- a/src/app/views/administration-gateway/admin-lora-table/admin-lora-table.component.html
+++ b/src/app/views/administration-gateway/admin-lora-table/admin-lora-table.component.html
@@ -1,23 +1,20 @@
-<table class="table">
-    <thead>
-        <tr>
-            <th>{{ 'LORA-GATEWAY-TABLE.NAME' | translate }}</th>
-            <th>{{ 'LORA-GATEWAY-TABLE.GATEWAYID' | translate }}</th>
-            <th>{{ 'LORA-GATEWAY-TABLE.LOCATION' | translate }}</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr
-            *ngFor="let gateway of gateways"
-            class="py-3"
-            app-admin-lora-table-row
-            [gateway]="gateway"
-            (deleteGateway)="deleteGateway($event)"
-            >
-        </tr>
-    </tbody>
-</table>
-
+<div class="table-responsive">
+    <table class="table">
+        <thead>
+            <tr>
+                <th>{{ 'LORA-GATEWAY-TABLE.NAME' | translate }}</th>
+                <th>{{ 'LORA-GATEWAY-TABLE.GATEWAYID' | translate }}</th>
+                <th>{{ 'LORA-GATEWAY-TABLE.LOCATION' | translate }}</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let gateway of gateways" class="py-3" app-admin-lora-table-row [gateway]="gateway"
+                (deleteGateway)="deleteGateway($event)">
+            </tr>
+        </tbody>
+    </table>
+</div>
 <!-- <nav *ngIf="pageTotal > 1" [attr.aria-label]="'TABLE.PAGINATION' | translate">
     <ul class="pagination justify-content-center mt-5">
         <li class="page-item">
