--- a/src/app/admin/organisation/organisation-list/organisation-list.component.html
+++ b/src/app/admin/organisation/organisation-list/organisation-list.component.html
@@ -1,7 +1,7 @@
-<div class="px-sm-5 py-sm-4">
+<div class="px-md-5 py-sm-4">
     <div class="row mb-5">
         <app-top-bar [sort]="sort" [pageLimit]="pageLimit" [title]="'NAV.ORGANISATIONS' | translate"
-            [ctaLabel]="'FORM.CREATE-NEW-ORGANISATION' | translate" [ctaRouterLink]="'new-organisation'"
+            [ctaLabel]="'ORGANISATION.FORM.CREATE-NEW-ORGANISATION' | translate" [ctaRouterLink]="'new-organisation'"
             (updatePageLimit)="updatePageLimit($event)" (selectedSortChange)="changeSort($event)"></app-top-bar>
     </div>
     <div class="row">
