--- a/src/app/admin/organisation/organisation-list/organisation-tabel/organisation-row/organisation-row.component.html
+++ b/src/app/admin/organisation/organisation-list/organisation-tabel/organisation-row/organisation-row.component.html
@@ -18,7 +18,7 @@
     <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{organisation.id}}">
       <li class="dropdown-item">
         <a [routerLink]="[organisation.id, 'edit-organisation']"
-          routerLinkActive="active">{{ 'USERS.TABLE-ROW.EDIT' | translate }}
+          routerLinkActive="active">{{ 'ORGANISATION-TABLE-ROW.EDIT' | translate }}
         </a>
       </li>
       <li class="dropdown-item">
