--- a/src/app/admin/permission/permission-edit/permission-edit.component.html
+++ b/src/app/admin/permission/permission-edit/permission-edit.component.html
@@ -11,46 +11,47 @@
 
     <div class="row mb-5">
         <div class="form-group mt-3 col-12">
-            <label class="form-label" for="name">{{'QUESTION.GIVE-PERMISSION-NAME' | translate}}</label>*
+            <label class="form-label" for="name">{{'PERMISSION.EDIT.NAME' | translate}}</label>*
             <input type="text" class="form-control" id="name" name="name"
-                [placeholder]="'QUESTION.GIVE-PERMISSION-NAME-PLACEHOLDER' | translate" maxlength="50" required
+                [placeholder]="'PERMISSION.EDIT.NAME-PLACEHOLDER' | translate" maxlength="50" required
                 [(ngModel)]="permission.name"
                 [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('name'), 'is-valid' : formFailedSubmit && !errorFields.includes('name')}">
         </div>
     </div>
 
     <div class="form-group mt-3 col-12">
-        <label class="form-label" for="name">{{'QUESTION.CHOOSE-PERMISSION-TYPE' | translate}}</label>*
+        <label class="form-label" for="name">{{'PERMISSION.EDIT.TYPE' | translate}}</label>*
         <select id="level" class="form-select" name="level" [(ngModel)]="permission.level" required
             [value]="permission.organizationId" [disabled]="isEditMode"
-            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('organizationId'), 'is-valid' : formFailedSubmit && !errorFields.includes('organizationId')}">
+            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('organizationId'), 'is-valid' : formFailedSubmit && !errorFields.includes('organizationId')}"
+            placeholder="'PERMISSION.EDIT.TYPE-PLACEHOLDER' | translate">
             <option *ngFor="let level of allowedLevels()" [value]="level" [selected]="level === permission.level">
                 {{level}}</option>
         </select>
     </div>
 
-    <!-- <div class="form-group mt-3 col-12">
-        <label class="form-label" for="name">{{'QUESTION.CHOOSE-USERS' | translate}}</label>*
+    <div class="form-group mt-3 col-12">
+        <label class="form-label" for="name">{{'PERMISSION.EDIT.USERS' | translate}}</label>*
         <div class="col-6">
             <select id="userIds" name="userIds" class="custom-select" multiple [(ngModel)]="permission.userIds">
                 <option *ngFor="let user of users" [value]="user.id" [selected]="isUserPartOfPermission(user.id)">
                     {{user.name}}</option>
             </select>
         </div>
-    </div> -->
-    <div class="form-group mt-3 col-12">
+    </div>
+    <!-- <div class="form-group mt-3 col-12">
         <mat-form-field>
-            <mat-label class="form-label" for="name">{{'QUESTION.CHOOSE-USERS' | translate}}</mat-label>
+            <mat-label class="form-label" for="name">{{'PERMISSION.EDIT.USERS' | translate}}</mat-label>
             <mat-select id="userIds" name="userIds" class="custom-select" multiple [(ngModel)]="permission.userIds"
-                multiple>
+                [placeholder]="'PERMISSION.EDIT.USERS-PLACEHOLDER' | translate" multiple>
                 <mat-option *ngFor="let user of users" [value]="user.id">{{user.name}}</mat-option>
             </mat-select>
         </mat-form-field>
-    </div>
+    </div> -->
 
     <div *ngIf="permission.level != 'GlobalAdmin'">
         <div class="form-group mt-3 col-12">
-            <label class="form-label" for="name">{{'QUESTION.CHOOSE-ORGANIZATION' | translate}}</label>*
+            <label class="form-label" for="name">{{'PERMISSION.EDIT.ORG' | translate}}</label>*
             <select id="organizationId" class="form-select" name="organizationId"
                 [(ngModel)]="permission.organizationId" required [value]="permission.organizationId"
                 [disabled]="isEditMode"
@@ -65,10 +66,11 @@
 
     <div *ngIf="isOrganizationAdministrationPermission()">
         <div class="form-group mt-3 col-12">
-            <label class="form-label" for="name">{{'QUESTION.CHOOSE-APPLICATIONS' | translate}}</label>*
+            <label class="form-label" for="name">{{'PERMISSION.EDIT.APPS' | translate}}</label>*
             <div class="col-6">
                 <select id="applicationIds" name="applicationIds" class="custom-select" multiple
-                    [(ngModel)]="permission.applicationIds">
+                    [(ngModel)]="permission.applicationIds"
+                    placeholder="'PERMISSION.EDIT.APPS-PLACEHOLDER' | translate">
                     <option *ngFor="let app of applications" [value]="app.id"
                         [selected]="isApplicationPartOfPermission(app.id)">
                         {{app.name}}</option>
