--- a/src/app/admin/users/user-detail/user-detail.component.html
+++ b/src/app/admin/users/user-detail/user-detail.component.html
@@ -23,7 +23,7 @@
             <div class="btn-group float-right">
                 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
-                    {{'USERS.DROPDOWN' | translate}} <span class="caret"></span>
+                    {{'USERS.DETAIL.DROPDOWN' | translate}} <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{user.id}}">
                     <li class="dropdown-item">
