--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -10,15 +10,14 @@
         <div *ngIf="isLoading">
             <app-loading-spinner></app-loading-spinner>
         </div>
-        <form class="p-5 login-box" style="background-color: white;" #authForm="ngForm" (ngSubmit)="onSubmit(authForm)"
-            *ngIf="!isLoading">
-            <div class="form-group">
-                <label for="email">Email</label>
+        <form class="p-5 jumbotron" style="" #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
+            <div class="form-group col-6">
+                <label for="email">{{'AUTH.EMAIL' | translate}}</label>
                 <input type="username" id="username" class="form-control" ngModel name="username" required email
                     [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('username'), 'is-valid' : formFailedSubmit && !errorFields.includes('username')}">
             </div>
-            <div class="form-group">
-                <label for="password">Password</label>
+            <div class="form-group col-6">
+                <label for="password">{{'AUTH.PASSWORD' | translate}}</label>
                 <input type="password" id="password" class="form-control" ngModel name="password" required minlength="6"
                     [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('password'), 'is-valid' : formFailedSubmit && !errorFields.includes('password')}">
             </div>
