--- a/src/app/admin/permission/permission-list/permission-tabel/permission-row/permission-row.component.html
+++ b/src/app/admin/permission/permission-list/permission-tabel/permission-row/permission-row.component.html
@@ -24,7 +24,7 @@
     <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{permission.id}}">
       <li class="dropdown-item">
         <a [routerLink]="[permission.id, 'edit-permission']"
-          routerLinkActive="active">{{ 'PERMISSION.TABLE-ROW.EDIT' | translate }}
+          routerLinkActive="active">{{ 'USERS.TABLE-ROW.EDIT' | translate }}
         </a>
       </li>
       <li class="dropdown-item">
