--- a/src/assets/scss/setup/_typography.scss
+++ b/src/assets/scss/setup/_typography.scss
@@ -202,8 +202,8 @@ p {
     color: $color-primary !important;
   }
 
-  &--gray {
-    color: $color-text-gray-02 !important;
+  &--grey {
+    color: $color-text-grey-02 !important;
   }
 
   &--black {
