--- a/src/app/admin/permission/permission-edit/permission-edit.component.html
+++ b/src/app/admin/permission/permission-edit/permission-edit.component.html
@@ -40,7 +40,7 @@
         </div>
     </div>
     <!-- <div class="form-group mt-3 col-12">
-        <mat-form-field>
+        <mat-form-field appearance="outline">
             <mat-label class="form-label" for="name">{{'PERMISSION.EDIT.USERS' | translate}}</mat-label>
             <mat-select id="userIds" name="userIds" class="custom-select" multiple [(ngModel)]="permission.userIds"
                 [placeholder]="'PERMISSION.EDIT.USERS-PLACEHOLDER' | translate" multiple>
