--- a/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
+++ b/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
@@ -3,9 +3,9 @@
     <div *ngIf="errorMessages" class="error-messages p-3">
         <ul class="mb-0">
             <div *ngIf="errorMessages">
-                <li  *ngFor="let error of errorMessages">
+                <li *ngFor="let error of errorMessages">
                     {{error}}
-                  </li>
+                </li>
             </div>
             <li *ngIf="errorMessage">
                 {{errorMessage}}
@@ -17,81 +17,51 @@
             <div class="col-xs-12 form-group">
                 <label for="name"
                     class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.NAME' | translate}}</label>
-                <input type="text" 
-                    class="form-control" 
-                    id="name" 
-                    name="name"
-                    [placeholder]="'PROFILES.DEVICE_PROFILE.NAME_PLACEHOLDER' | translate" 
-                    maxlength="50" 
-                    required
+                <input type="text" class="form-control" id="name" name="name"
+                    [placeholder]="'PROFILES.DEVICE_PROFILE.NAME_PLACEHOLDER' | translate" maxlength="50" required
                     [(ngModel)]="deviceProfile.name">
             </div>
-            
+
             <div class="col-xs-12 form-group">
                 <label for="macVersion"
                     class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.MACVERSION' | translate}}</label>
-                <input type="text" 
-                    class="form-control" 
-                    id="macVersion" 
-                    name="macVersion"
-                    [placeholder]="'PROFILES.DEVICE_PROFILE.MACVERSION_PLACEHOLDER' | translate" 
-                    maxlength="50" 
-                    required
+                <input type="text" class="form-control" id="macVersion" name="macVersion"
+                    [placeholder]="'PROFILES.DEVICE_PROFILE.MACVERSION_PLACEHOLDER' | translate" maxlength="50" required
                     [(ngModel)]="deviceProfile.macVersion">
             </div>
             <div class="col-xs-12 form-group">
-                <mat-form-field appearance="fill">
-                    <mat-label>{{'PROFILES.DEVICE_PROFILE.REGPARAMSREVISION' | translate}}</mat-label>
-                    <select matNativeControl 
-                        required 
-                        name="regParamsRevision"
-                        [(ngModel)]="deviceProfile.regParamsRevision"
-                        [value]="deviceProfile.regParamsRevision">
-                      <option value="A">A</option>
-                      <option value="B">B</option>
+                <label
+                    class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.REGPARAMSREVISION' | translate}}</label>
+                <mat-form-field appearance="outline">
+                    <select matNativeControl required name="regParamsRevision"
+                        [(ngModel)]="deviceProfile.regParamsRevision" [value]="deviceProfile.regParamsRevision">
+                        <option value="A">A</option>
+                        <option value="B">B</option>
                     </select>
                 </mat-form-field>
             </div>
             <div class="col-xs-12 form-group">
                 <label for="maxEIRP"
                     class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.MAXEIRP' | translate}}</label>
-                <input type="number"
-                    class="form-control" 
-                    id="maxEIRP" 
-                    name="maxEIRP"
-                    [placeholder]="'PROFILES.DEVICE_PROFILE.MAXEIRP_PLACEHOLDER' | translate" 
-                    maxlength="50"
-                    min="0" 
-                    required
-                    [(ngModel)]="deviceProfile.maxEIRP">
+                <input type="number" class="form-control" id="maxEIRP" name="maxEIRP"
+                    [placeholder]="'PROFILES.DEVICE_PROFILE.MAXEIRP_PLACEHOLDER' | translate" maxlength="50" min="0"
+                    required [(ngModel)]="deviceProfile.maxEIRP">
             </div>
 
             <div class="col-xs-12 form-group">
                 <label for="geolocBufferTTL"
                     class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.GEOLOCBUFFERTTL' | translate}}</label>
-                <input type="number"
-                    min="0"
-                    class="form-control" 
-                    id="geolocBufferTTL" 
-                    name="geolocBufferTTL"
-                    [placeholder]="'PROFILES.DEVICE_PROFILE.GEOLOCBUFFERTTL_PLACEHOLDER' | translate" 
-                    maxlength="50" 
-                    required
-                    [(ngModel)]="deviceProfile.geolocBufferTTL">
+                <input type="number" min="0" class="form-control" id="geolocBufferTTL" name="geolocBufferTTL"
+                    [placeholder]="'PROFILES.DEVICE_PROFILE.GEOLOCBUFFERTTL_PLACEHOLDER' | translate" maxlength="50"
+                    required [(ngModel)]="deviceProfile.geolocBufferTTL">
             </div>
 
             <div class="col-xs-12 form-group">
                 <label for="geolocMinBufferSize"
                     class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.GEOLOCMINBUFFERSIZE' | translate}}</label>
-                <input type="number"
-                    min="0"
-                    class="form-control" 
-                    id="geolocMinBufferSize" 
-                    name="geolocMinBufferSize"
-                    [placeholder]="'PROFILES.DEVICE_PROFILE.GEOLOCMINBUFFERSIZE_PLACEHOLDER' | translate" 
-                    maxlength="50" 
-                    required
-                    [(ngModel)]="deviceProfile.geolocMinBufferSize">
+                <input type="number" min="0" class="form-control" id="geolocMinBufferSize" name="geolocMinBufferSize"
+                    [placeholder]="'PROFILES.DEVICE_PROFILE.GEOLOCMINBUFFERSIZE_PLACEHOLDER' | translate" maxlength="50"
+                    required [(ngModel)]="deviceProfile.geolocMinBufferSize">
             </div>
         </mat-tab>
         <mat-tab label="{{'PROFILES.DEVICE_PROFILE.OTAA-ABP' | translate}}">
@@ -104,74 +74,43 @@
                 <div class="col-xs-12 form-group">
                     <label for="rxDelay1"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.RXDELAY1' | translate}}</label>
-                    <input type="number" 
-                        class="form-control" 
-                        id="rxDelay1" 
-                        name="rxDelay1"
-                        [placeholder]="'PROFILES.DEVICE_PROFILE.RXDELAY1_PLACEHOLDER' | translate" 
-                        maxlength="50"
-                        min="0"
-                        required
-                        [(ngModel)]="deviceProfile.rxDelay1">
+                    <input type="number" class="form-control" id="rxDelay1" name="rxDelay1"
+                        [placeholder]="'PROFILES.DEVICE_PROFILE.RXDELAY1_PLACEHOLDER' | translate" maxlength="50"
+                        min="0" required [(ngModel)]="deviceProfile.rxDelay1">
                 </div>
                 <div class="col-xs-12 form-group">
                     <label for="rxDROffset1"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.RXDROFFSET1' | translate}}</label>
-                    <input type="number" 
-                        class="form-control" 
-                        id="rxDROffset1" 
-                        name="rxDROffset1"
-                        [placeholder]="'PROFILES.DEVICE_PROFILE.RXDROFFSET1_PLACEHOLDER' | translate" 
-                        maxlength="50"
-                        min="0"
-                        required
-                        [(ngModel)]="deviceProfile.rxDROffset1">
+                    <input type="number" class="form-control" id="rxDROffset1" name="rxDROffset1"
+                        [placeholder]="'PROFILES.DEVICE_PROFILE.RXDROFFSET1_PLACEHOLDER' | translate" maxlength="50"
+                        min="0" required [(ngModel)]="deviceProfile.rxDROffset1">
                 </div>
                 <div class="col-xs-12 form-group">
                     <label for="rxDataRate2"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.RXDATARATE2' | translate}}</label>
-                    <input type="number" 
-                        class="form-control" 
-                        id="rxDataRate2" 
-                        name="rxDataRate2"
-                        [placeholder]="'PROFILES.DEVICE_PROFILE.RXDATARATE2_PLACEHOLDER' | translate" 
-                        maxlength="50"
-                        min="0"
-                        required
-                        [(ngModel)]="deviceProfile.rxDataRate2">
+                    <input type="number" class="form-control" id="rxDataRate2" name="rxDataRate2"
+                        [placeholder]="'PROFILES.DEVICE_PROFILE.RXDATARATE2_PLACEHOLDER' | translate" maxlength="50"
+                        min="0" required [(ngModel)]="deviceProfile.rxDataRate2">
                 </div>
                 <div class="col-xs-12 form-group">
                     <label for="rxFreq2"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.RXFREQ2' | translate}}</label>
-                    <input type="number" 
-                        class="form-control" 
-                        id="rxFreq2" 
-                        name="rxFreq2"
-                        [placeholder]="'PROFILES.DEVICE_PROFILE.RXFREQ2_PLACEHOLDER' | translate" 
-                        maxlength="50"
-                        min="0"
-                        required
-                        [(ngModel)]="deviceProfile.rxFreq2">
+                    <input type="number" class="form-control" id="rxFreq2" name="rxFreq2"
+                        [placeholder]="'PROFILES.DEVICE_PROFILE.RXFREQ2_PLACEHOLDER' | translate" maxlength="50" min="0"
+                        required [(ngModel)]="deviceProfile.rxFreq2">
                 </div>
                 <div class="col-xs-12 form-group">
                     <label for="factoryPresetFreqsInput"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.FACTORYPRESETFREQS' | translate}}</label>
-                    <input type="text" 
-                        class="form-control" 
-                        id="factoryPresetFreqsInput" 
-                        name="factoryPresetFreqsInput"
-                        [placeholder]="'PROFILES.DEVICE_PROFILE.FACTORYPRESETFREQS_PLACEHOLDER' | translate" 
-                        maxlength="50" 
-                        required
-                        [(ngModel)]="deviceProfile.factoryPresetFreqsInput">
+                    <input type="text" class="form-control" id="factoryPresetFreqsInput" name="factoryPresetFreqsInput"
+                        [placeholder]="'PROFILES.DEVICE_PROFILE.FACTORYPRESETFREQS_PLACEHOLDER' | translate"
+                        maxlength="50" required [(ngModel)]="deviceProfile.factoryPresetFreqsInput">
                 </div>
             </ng-container>
         </mat-tab>
         <mat-tab label="Class B">
 
-            <mat-checkbox 
-                [(ngModel)]="deviceProfile.supportsClassB" 
-                name="supportsClassB">
+            <mat-checkbox [(ngModel)]="deviceProfile.supportsClassB" name="supportsClassB">
                 {{'PROFILES.DEVICE_PROFILE.SUPPORTSCLASSB_ACTIVATE' | translate}}
             </mat-checkbox>
 
@@ -179,85 +118,56 @@
                 <div class="col-xs-12 form-group">
                     <label for="classBTimeout"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.CLASSBTIMEOUT' | translate}}</label>
-                    <input type="number" 
-                        class="form-control" 
-                        id="classBTimeout" 
-                        name="classBTimeout"
-                        [placeholder]="'PROFILES.DEVICE_PROFILE.CLASSBTIMEOUT_PLACEHOLDER' | translate" 
-                        maxlength="50"
-                        min="0"
-                        required
-                        [(ngModel)]="deviceProfile.classBTimeout">
+                    <input type="number" class="form-control" id="classBTimeout" name="classBTimeout"
+                        [placeholder]="'PROFILES.DEVICE_PROFILE.CLASSBTIMEOUT_PLACEHOLDER' | translate" maxlength="50"
+                        min="0" required [(ngModel)]="deviceProfile.classBTimeout">
                 </div>
-   
+
                 <div class="col-xs-12 form-group">
-                    <mat-form-field appearance="fill">
+                    <mat-form-field appearance="outline">
                         <mat-label>{{'PROFILES.DEVICE_PROFILE.PINGSLOTPERIOD' | translate}}</mat-label>
-                        <select matNativeControl 
-                            required 
-                            name="pingSlotPeriod"
-                            [(ngModel)]="deviceProfile.pingSlotPeriod"
-                            [value]="deviceProfile.pingSlotPeriod">
-                            <option value="32" >Every second</option>
-                            <option value="64" >Every 2 seconds</option>
-                            <option value="128" >Every 4 seconds</option>
-                            <option value="256" >Every 8 seconds</option>
-                            <option value="512" >Every 16 seconds</option>
-                            <option value="1024" >Every 32 seconds</option>
-                            <option value="2048" >Every 64 seconds</option>
-                            <option value="4096" >Every 128 seconds</option>
+                        <select matNativeControl required name="pingSlotPeriod"
+                            [(ngModel)]="deviceProfile.pingSlotPeriod" [value]="deviceProfile.pingSlotPeriod">
+                            <option value="32">Every second</option>
+                            <option value="64">Every 2 seconds</option>
+                            <option value="128">Every 4 seconds</option>
+                            <option value="256">Every 8 seconds</option>
+                            <option value="512">Every 16 seconds</option>
+                            <option value="1024">Every 32 seconds</option>
+                            <option value="2048">Every 64 seconds</option>
+                            <option value="4096">Every 128 seconds</option>
                         </select>
                     </mat-form-field>
                 </div>
-    
+
                 <div class="col-xs-12 form-group">
                     <label for="pingSlotDR"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.PINGSLOTDR' | translate}}</label>
-                    <input type="number" 
-                        class="form-control" 
-                        id="pingSlotDR" 
-                        name="pingSlotDR"
-                        [placeholder]="'PROFILES.DEVICE_PROFILE.PINGSLOTDR_PLACEHOLDER' | translate" 
-                        maxlength="50"
-                        min="0"
-                        required
-                        [(ngModel)]="deviceProfile.pingSlotDR">
+                    <input type="number" class="form-control" id="pingSlotDR" name="pingSlotDR"
+                        [placeholder]="'PROFILES.DEVICE_PROFILE.PINGSLOTDR_PLACEHOLDER' | translate" maxlength="50"
+                        min="0" required [(ngModel)]="deviceProfile.pingSlotDR">
                 </div>
 
                 <div class="col-xs-12 form-group">
                     <label for="pingSlotFreq"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.PINGSLOTFREQ' | translate}}</label>
-                    <input type="number" 
-                        class="form-control" 
-                        id="pingSlotFreq" 
-                        name="pingSlotFreq"
-                        [placeholder]="'PROFILES.DEVICE_PROFILE.PINGSLOTFREQ_PLACEHOLDER' | translate" 
-                        maxlength="50"
-                        min="0" 
-                        required
-                        [(ngModel)]="deviceProfile.pingSlotFreq">
+                    <input type="number" class="form-control" id="pingSlotFreq" name="pingSlotFreq"
+                        [placeholder]="'PROFILES.DEVICE_PROFILE.PINGSLOTFREQ_PLACEHOLDER' | translate" maxlength="50"
+                        min="0" required [(ngModel)]="deviceProfile.pingSlotFreq">
                 </div>
             </ng-container>
         </mat-tab>
         <mat-tab label="Class C">
-            
-            <mat-checkbox 
-                [(ngModel)]="deviceProfile.supportsClassC" 
-                name="supportsClassC">
+
+            <mat-checkbox [(ngModel)]="deviceProfile.supportsClassC" name="supportsClassC">
                 {{'PROFILES.DEVICE_PROFILE.SUPPORTSCLASSC_ACTIVATE' | translate}}
             </mat-checkbox>
             <div class="col-xs-12 form-group">
                 <label for="classCTimeout"
                     class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.CLASSCTIMEOUT' | translate}}</label>
-                <input type="number" 
-                    class="form-control" 
-                    id="classCTimeout" 
-                    name="classCTimeout"
-                    [placeholder]="'PROFILES.DEVICE_PROFILE.CLASSCTIMEOUT_PLACEHOLDER' | translate" 
-                    maxlength="50"
-                    min="0" 
-                    required
-                    [(ngModel)]="deviceProfile.classCTimeout">
+                <input type="number" class="form-control" id="classCTimeout" name="classCTimeout"
+                    [placeholder]="'PROFILES.DEVICE_PROFILE.CLASSCTIMEOUT_PLACEHOLDER' | translate" maxlength="50"
+                    min="0" required [(ngModel)]="deviceProfile.classCTimeout">
             </div>
         </mat-tab>
     </mat-tab-group>
@@ -267,7 +177,7 @@
                 <button type="button" class="btn btn-light" (click)="routeBack()">
                     {{'PROFILES.DEVICE_PROFILE.CANCEL' | translate}}
                 </button>
-                <button type="submit" class="btn btn-dark ml-3" [disabled]="!'is-valid'">
+                <button type="submit" class="btn btn-primary ml-3" [disabled]="!'is-valid'">
                     {{'PROFILES.DEVICE_PROFILE.SAVE' | translate}}
                 </button>
             </div>
