global button styling

--- a/src/app/admin/permission/permission-edit/permission-edit.component.html
+++ b/src/app/admin/permission/permission-edit/permission-edit.component.html
@@ -83,7 +83,7 @@
     <!-- TODO: Select application -->
 
     <div class="form-group mt-5">
-        <button (click)="routeBack()" class="btn btn-light" type="button">{{ 'GEN.CANCEL' | translate}}</button>
-        <button class="btn btn-dark ml-2" type="submit">{{ 'PERMISSION.SAVE' | translate}}</button>
+        <button (click)="routeBack()" class="btn btn-secondary" type="button">{{ 'GEN.CANCEL' | translate}}</button>
+        <button class="btn btn-primary ml-2" type="submit">{{ 'PERMISSION.SAVE' | translate}}</button>
     </div>
 </form>
