--- a/src/app/admin/users/user-edit/user-edit.component.html
+++ b/src/app/admin/users/user-edit/user-edit.component.html
@@ -46,7 +46,7 @@
     </div>
     <div class="form-group mt-5 clearfix">
         <div class="col-12 d-flex justify-content-end">
-            <button (click)="routeBack()" class="btn btn-light" type="button">{{ 'GEN.CANCEL' | translate}}</button>
+            <button (click)="routeBack()" class="btn btn-secondary" type="button">{{ 'GEN.CANCEL' | translate}}</button>
             <button class="btn btn-primary ml-2" type="submit">{{ 'USERS.FORM.SAVE' | translate}}</button>
         </div>
     </div>
