--- a/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
+++ b/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
@@ -1,4 +1,5 @@
-<app-form-header [backButton]="backButton" [title]="title"></app-form-header>
+<app-form-header [backButton]="backButton" [title]="title">
+</app-form-header>
 <form (ngSubmit)="onSubmit()" class="os2-form mt-3 px-md-5 py-md-4">
     <div *ngIf="errorMessages" class="error-messages p-3">
         <ul class="mb-0">
@@ -174,7 +175,7 @@
     <div class="row mt-5">
         <div class="col-xs-12">
             <div class="float-right">
-                <button type="button" class="btn btn-light" (click)="routeBack()">
+                <button type="button" class="btn btn-secondary" (click)="routeBack()">
                     {{'PROFILES.DEVICE_PROFILE.CANCEL' | translate}}
                 </button>
                 <button type="submit" class="btn btn-primary ml-3" [disabled]="!'is-valid'">
