--- a/src/app/profiles/profiles-list/profiles-list.component.html
+++ b/src/app/profiles/profiles-list/profiles-list.component.html
@@ -1,6 +1,6 @@
 <div class="px-md-5 py-md-4">
     <div class="row">
-        <app-top-bar [showSelectedSort]="false" [title]="'Profiles'"></app-top-bar>
+        <app-top-bar [showSelectedSort]="false" [title]="'PROFILES.NAME' | translate"></app-top-bar>
     </div>
     <div class=" row">
         <app-service-profiles-list></app-service-profiles-list>
