--- a/src/app/profiles/service-profiles/service-profiles-edit/service-profiles-edit.component.html
+++ b/src/app/profiles/service-profiles/service-profiles-edit/service-profiles-edit.component.html
@@ -4,9 +4,9 @@
     <div *ngIf="errorMessages" class="error-messages p-3">
         <ul class="mb-0">
             <div *ngIf="errorMessages">
-                <li  *ngFor="let error of errorMessages">
+                <li *ngFor="let error of errorMessages">
                     {{error}}
-                  </li>
+                </li>
             </div>
             <li *ngIf="errorMessage">
                 {{errorMessage}}
@@ -135,10 +135,10 @@
     <div class="row mt-5">
         <div class="col-xs-12">
             <div class="float-right">
-                <button type="button" class="btn btn-light" (click)="routeBack()">
+                <button type="button" class="btn btn-secondary" (click)="routeBack()">
                     {{'PROFILES.SERVICE_PROFILE.CANCEL' | translate}}
                 </button>
-                <button type="submit" class="btn btn-dark ml-3" [disabled]="!'is-valid'">
+                <button type="submit" class="btn btn-primary ml-3" [disabled]="!'is-valid'">
                     {{'PROFILES.SERVICE_PROFILE.SAVE' | translate}}
                 </button>
             </div>
