--- a/src/app/shared/form/form-body-application/form-body-application.component.html
+++ b/src/app/shared/form/form-body-application/form-body-application.component.html
@@ -26,7 +26,7 @@
   </div>
 
   <div class="form-group mt-5">
-    <button (click)="routeBack()" class="btn btn-light" type="button">{{ 'GEN.CANCEL' | translate}}</button>
-    <button class="btn btn-dark ml-2" type="submit">{{ submitButton }}</button>
+    <button (click)="routeBack()" class="btn btn-secondary" type="button">{{ 'GEN.CANCEL' | translate}}</button>
+    <button class="btn btn-primary ml-2" type="submit">{{ submitButton }}</button>
   </div>
 </form>
