--- a/src/app/shared/form/form-body-iot-devices/form-body-iot-devices.component.html
+++ b/src/app/shared/form/form-body-iot-devices/form-body-iot-devices.component.html
@@ -60,10 +60,11 @@
 
     <div class="form-group mt-3 col-12">
       <label class="form-label" for="name">{{'QUESTION.CHOOSE-APPLICATION' | translate}}</label>*
-      <select id="applicationId" class="form-select" name="applicationId" [(ngModel)]="iotDevice.applicationId" required [disabled]="disableChoseApplication"
-        [value]="iotDevice.applicationId"
+      <select id="applicationId" class="form-select" name="applicationId" [(ngModel)]="iotDevice.applicationId" required
+        [disabled]="disableChoseApplication" [value]="iotDevice.applicationId"
         [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('applicationId'), 'is-valid' : formFailedSubmit && !errorFields.includes('applicationId')}">
-        <option *ngFor="let app of applications" [value]="app.id" [selected]="app.id === iotDevice.applicationId">{{app.name}}</option>
+        <option *ngFor="let app of applications" [value]="app.id" [selected]="app.id === iotDevice.applicationId">
+          {{app.name}}</option>
       </select>
     </div>
   </div>
@@ -72,21 +73,24 @@
     <div class="form-group mt-3 col-12">
       <label class="form-label" for="comment">{{'IOTDEVICE.COMMENT' | translate}}</label>
       <input type="text" class="form-control" id="comment" name="comment"
-        [placeholder]="'QUESTION.EXTRA-COMMENT-PLACEHOLDER' | translate" maxLength="1024" [(ngModel)]="iotDevice.comment"
+        [placeholder]="'QUESTION.EXTRA-COMMENT-PLACEHOLDER' | translate" maxLength="1024"
+        [(ngModel)]="iotDevice.comment"
         [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('comment'), 'is-valid' : formFailedSubmit && !errorFields.includes('comment')}">
     </div>
 
     <div class="form-group mt-3 col-6">
       <label class="form-label" for="longitude">{{'IOTDEVICE.LONGITUDE' | translate}}</label>
       <input type="number" class="form-control" id="longitude" name="longitude" [placeholder]="00" required
-        [(ngModel)]="iotDevice.longitude" step=".000001" min="-180" max="180" maxlength="9" (keyup)="onCoordinateKey($event)"
+        [(ngModel)]="iotDevice.longitude" step=".000001" min="-180" max="180" maxlength="9"
+        (keyup)="onCoordinateKey($event)"
         [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('longitude'), 'is-valid' : formFailedSubmit && !errorFields.includes('longitude')}">
     </div>
 
     <div class="form-group mt-3 col-6">
       <label class="form-label" for="latitude">{{'IOTDEVICE.LATITUDE' | translate}}</label>
       <input type="number" class="form-control" id="latitude" name="latitude" [placeholder]="00" required
-        [(ngModel)]="iotDevice.latitude" step=".000001" min="-90" max="90" maxlength="9" (keyup)="onCoordinateKey($event)"
+        [(ngModel)]="iotDevice.latitude" step=".000001" min="-90" max="90" maxlength="9"
+        (keyup)="onCoordinateKey($event)"
         [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('latitude'), 'is-valid' : formFailedSubmit && !errorFields.includes('latitude')}">
     </div>
   </div>
@@ -115,19 +119,13 @@
     <ng-container *ngIf="iotDevice.lorawanSettings.serviceProfileID || serviceProfiles">
       <div class="form-group mt-3 col-12">
         <label class="form-label" for="serviceProfileID">{{'QUESTION.CHOOSE-SERVICEPROFILE' | translate}}</label>*
-        <select 
-          id="serviceProfileID" 
-          class="form-select" 
-          name="serviceProfileID" 
-          [(ngModel)]="iotDevice.lorawanSettings.serviceProfileID" 
-          required
+        <select id="serviceProfileID" class="form-select" name="serviceProfileID"
+          [(ngModel)]="iotDevice.lorawanSettings.serviceProfileID" required
           [value]="iotDevice.lorawanSettings.serviceProfileID"
           [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('serviceProfileID'), 'is-valid' : formFailedSubmit && !errorFields.includes('serviceProfileID')}">
-          <option 
-            *ngFor="let serviceProfile of serviceProfiles" 
-            [value]="serviceProfile.id" 
+          <option *ngFor="let serviceProfile of serviceProfiles" [value]="serviceProfile.id"
             [selected]="serviceProfile.id === iotDevice.lorawanSettings.serviceProfileID">
-              {{serviceProfile.name}}
+            {{serviceProfile.name}}
           </option>
         </select>
       </div>
@@ -135,20 +133,13 @@
     <ng-container *ngIf="iotDevice.lorawanSettings.deviceProfileID || deviceProfiles">
       <div class="form-group mt-3 col-12">
         <label class="form-label" for="deviceProfileID">{{'QUESTION.CHOOSE-DEVICE' | translate}}</label>*
-        <select 
-          id="deviceProfileID" 
-          class="form-select" 
-          name="deviceProfileID" 
-          [(ngModel)]="iotDevice.lorawanSettings.deviceProfileID" 
-          required
-          (change)="onChangeDeviceProfile($event.target.value)"
-          [value]="iotDevice.lorawanSettings.deviceProfileID"
+        <select id="deviceProfileID" class="form-select" name="deviceProfileID"
+          [(ngModel)]="iotDevice.lorawanSettings.deviceProfileID" required
+          (change)="onChangeDeviceProfile($event.target.value)" [value]="iotDevice.lorawanSettings.deviceProfileID"
           [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('deviceProfileID'), 'is-valid' : formFailedSubmit && !errorFields.includes('deviceProfileID')}">
-          <option 
-            *ngFor="let deviceProfile of deviceProfiles" 
-            [value]="deviceProfile.id" 
+          <option *ngFor="let deviceProfile of deviceProfiles" [value]="deviceProfile.id"
             [selected]="deviceProfile.id === iotDevice.lorawanSettings.deviceProfileID">
-              {{deviceProfile.name}}
+            {{deviceProfile.name}}
           </option>
         </select>
       </div>
@@ -177,7 +168,7 @@
             [(ngModel)]="iotDevice.lorawanSettings.devAddr"
             [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('devAddr'), 'is-valid' : formFailedSubmit && !errorFields.includes('devAddr')}">
         </div>
-    
+
         <div class="form-group mt-5">
           <label class="form-label" for="networkSessionKey">{{'QUESTION.NETWORKSESSIONKEY' | translate}}*</label>
           <input type="text" id="networkSessionKey" name="networkSessionKey" maxLength="32"
@@ -185,9 +176,10 @@
             [(ngModel)]="iotDevice.lorawanSettings.networkSessionKey"
             [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('networkSessionKey'), 'is-valid' : formFailedSubmit && !errorFields.includes('networkSessionKey')}">
         </div>
-    
+
         <div class="form-group mt-5">
-          <label class="form-label" for="applicationSessionKey">{{'QUESTION.APPLICATIONSESSIONKEY' | translate}}*</label>
+          <label class="form-label"
+            for="applicationSessionKey">{{'QUESTION.APPLICATIONSESSIONKEY' | translate}}*</label>
           <input type="text" id="applicationSessionKey" name="applicationSessionKey" maxLength="32"
             [placeholder]="'QUESTION.APPLICATIONSESSIONKEY-PLACEHOLDER' | translate" class="form-control"
             [(ngModel)]="iotDevice.lorawanSettings.applicationSessionKey"
@@ -199,9 +191,7 @@
     <div class="form-group mt-5">
       <label class="form-label" for="skipFCntCheck">{{'QUESTION.SKIPFCNTCHECK' | translate}}</label>
       <div>
-        <mat-checkbox 
-          [(ngModel)]="iotDevice.lorawanSettings.skipFCntCheck" 
-          name="skipFCntCheck">
+        <mat-checkbox [(ngModel)]="iotDevice.lorawanSettings.skipFCntCheck" name="skipFCntCheck">
           {{'QUESTION.SKIPFCNTCHECK-YES' | translate}}
         </mat-checkbox>
       </div>
@@ -209,7 +199,7 @@
   </ng-container>
 
   <div class="form-group mt-5">
-    <button (click)="routeBack()" class="btn btn-light" type="button">{{ 'GEN.CANCEL' | translate}}</button>
-    <button class="btn btn-dark ml-2" type="submit">{{ submitButton }}</button>
+    <button (click)="routeBack()" class="btn btn-secondary" type="button">{{ 'GEN.CANCEL' | translate}}</button>
+    <button class="btn btn-primary ml-2" type="submit">{{ submitButton }}</button>
   </div>
 </form>
