ændre til lora-gateway

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -37,13 +37,13 @@
             <li class="nav-item py-2">
               <a routerLink="/my-applications" routerLinkActive="active" class="nav-link pl-5 position-relative rounded"
                 id="myApplications">
-                {{ 'NAV.MY-APPLICATIONS' | translate }}
+                {{ 'NAV.APPLICATIONS' | translate }}
               </a>
             </li>
             <li class="nav-item py-2">
-              <a routerLink="/mine-lora-gateways" routerLinkActive="active"
-                class="nav-link pl-5 position-relative rounded" id="myLoraGateway">
-                {{ 'NAV.MY-LORA-GATEWAYS' | translate }}
+              <a routerLink="/lora-gateways" routerLinkActive="active" class="nav-link pl-5 position-relative rounded"
+                id="myLoraGateway">
+                {{ 'NAV.LORA-GATEWAYS' | translate }}
               </a>
             </li>
             <li class="nav-item py-2">
