--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -10,13 +10,13 @@
         <div *ngIf="isLoading">
             <app-loading-spinner></app-loading-spinner>
         </div>
-        <form class="p-5 jumbotron" style="" #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
-            <div class="form-group col-6">
+        <form class="p-5 jumbotron" #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
+            <div class="form-group col-8">
                 <label for="email">{{'AUTH.EMAIL' | translate}}</label>
                 <input type="username" id="username" class="form-control" ngModel name="username" required email
                     [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('username'), 'is-valid' : formFailedSubmit && !errorFields.includes('username')}">
             </div>
-            <div class="form-group col-6">
+            <div class="form-group col-8">
                 <label for="password">{{'AUTH.PASSWORD' | translate}}</label>
                 <input type="password" id="password" class="form-control" ngModel name="password" required minlength="6"
                     [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('password'), 'is-valid' : formFailedSubmit && !errorFields.includes('password')}">
